2006-12-06  Christian Persch  <chpe@cvs.gnome.org>

	* libgnome/gnome-program.h:
	Fix for building with GNOME_DISABLE_DEPRECATED.

2006-12-06  Christian Persch  <chpe@cvs.gnome.org>

	* doc/reference/tmpl/gnome-program.sgml:
	* libgnome/gnome-program.h:
	Deprecate gnome_program_preinit/parse_args/postinit. Bug #382046.

2006-12-05  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Bump version after release.

2006-12-04  Christian Persch  <chpe@cvs.gnome.org>

	* libgnome/gnome-init.c: (libgnome_module_get_goption_group):
	Add ":" after description. Bug #350227.

2006-12-03  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update
	* configure.in: Bump version
	* libgnome/gnome-config.h:
	* libgnome/gnome-i18n.h:
	* libgnome/gnome-score.h:
	- Fix header guards.

2006-11-13  Vincent Untz  <vuntz@gnome.org>

	* libgnome/gnome-init.c: (libgnome_option_cb)
	(libgnome_goption_version): s/Gnome/GNOME

2006-11-07  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-config.c: (access_config_extended):
	* libgnome/gnome-program.c: (gnome_program_preinit):
	* libgnome/gnome-score.c: (gnome_score_child):
	* libgnome/gnome-sound.c: (gnome_sound_sample_load_wav),
	(use_sound), (gnome_sound_init), (gnome_sound_shutdown):
	* libgnome/gnome-triggers.c: (gnome_trigger_free):
	g_free/g_strdup handles NULL just fine according to
	$CVSROOT/gnumeric/tools/check-gfrees.

2006-11-07  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in:
	* schemas/.cvsignore:
	* schemas/Makefile.am:
	* schemas/desktop_gnome_interface.schemas.in.in:
	Patch from Fernando Herrera to enable a11y by default
	in the development version.

2006-10-30  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-url.c: (gnome_url_show_with_env):
	More error message improvement. Closes bug #365871. Patch
	from Matthias Clasen.

2006-10-30  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-url.c: (gnome_url_show_with_env):
	Recommit the fix for bug #365342.

2006-10-30  Kjartan Maraas  <kmaraas@gnome.org>
