@@ -71,16 +71,23 @@ AM_PROG_LIBTOOL
 
 AC_MSG_CHECKING([for Win32])
 case "$host" in
+  *-*-cygwin*)
+    os_win32=no
+    SOPREFIX=cyg
+    ;;
   *-*-mingw*)
     os_win32=yes
+    SOPREFIX=lib
     ;;
   *)
     os_win32=no
+    SOPREFIX=lib
     ;;
 esac
 AC_MSG_RESULT([$os_win32])
 
 AM_CONDITIONAL(OS_WIN32, [test $os_win32 = yes])
+AC_SUBST(SOPREFIX)
 
 AC_CHECK_FUNCS([setenv unsetenv clearenv setfsgid])
 AC_CHECK_HEADERS(sys/fsuid.h)
