@@ -1,7 +1,7 @@
 <oaf_info>
 
 <oaf_server iid="OAFIID:GNOME_Moniker_std_Factory"
-        type="shlib" location="@MONIKER_LIBDIR@/libmoniker_extra_2">
+        type="shlib" location="@MONIKER_LIBDIR@/@SOPREFIX@moniker_extra_2">
         <oaf_attribute name="repo_ids" type="stringv">
                 <item value="IDL:Bonobo/GenericFactory:1.0"/>
         </oaf_attribute>
