@@ -1,3 +1,11 @@
+2006-12-06  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* configure.in:
+	* monikers/GNOME_Moniker_std.server.in.in:
+	* monikers/Makefile.am:
+	Cygwin fixes from the Cygwin ports maintainer.
+	Closes bug #322895
+
 2006-12-06  Christian Persch  <chpe@cvs.gnome.org>
 
 	* libgnome/gnome-program.h:
